--- a/sass/sections/hero.sass
+++ b/sass/sections/hero.sass
@@ -1,6 +1,7 @@
 section.hero
-	background: linear-gradient(to bottom, #ffffff 0%, #ffffff 80%, #ECEAEA 100%)
+	background: linear-gradient(to bottom, #ffffff 0%, #ffffff 20%, #ECEAEA 100%)
 	display: flex
+	flex-direction: column
 	justify-content: center
 	align-items: center
 	overflow: hidden
@@ -56,11 +57,6 @@ section.hero
 					color: $color-brand
 				&:hover
 					background-color: darken(#F3F5F7, 5%)
-					//background-color: $color-brand
-					//border-color: $color-brand
-					//color: $color-white
-					i, span
-						//color: $color-white
 
 
 				a
