--- a/sass/partials/footer.sass
+++ b/sass/partials/footer.sass
@@ -51,7 +51,7 @@ section.footer
 
 			@include media-breakpoint-up(md)
 				padding-left: 1rem
-				padding-right: 2rem
+				padding-right: 0rem
 				width: 25%
 				width: auto
 
@@ -63,10 +63,10 @@ section.footer
 				margin: 0
 				padding: 0
 				li
-					margin-bottom: 2rem
+					margin-bottom: 1.5rem
 					i
 						display: inline-block
-						margin-right: 1.3rem
+						margin-right: 1.2rem
 						&:first-of-type
 							color: $color-brand
 					a 
@@ -83,6 +83,25 @@ section.footer
 				font-size: 1.4rem
 				font-weight: normal
 				color: rgba(255, 255, 255, 0.7)
+
+		.soc2
+			padding-top: 2rem
+			.soc2-image
+				width: 100%
+				max-width: 113px
+				margin: 0 auto 2rem auto
+				display: block
+				img
+					width: 100%
+					height: auto
+			p
+				text-align: center
+				a
+					color: #fff
+					text-decoration: none
+					font-weight: 600
+					font-size: 1.6rem
+
 
 		.mailinglist-form
 
