--- a/sass/partials/header.sass
+++ b/sass/partials/header.sass
@@ -67,21 +67,23 @@ header
 
 		
 		.nav-item
-			margin: 0 1.5rem
+			padding: 0
+			margin: 0
 			font-size: 1.8rem
 			@include media-breakpoint-up(sm)
 				//margin-left: 2rem
 			@include media-breakpoint-up(md)
 				//margin-left: 3rem
 			&:first-of-type
-				//margin-left: 0
+
 
 			a.nav-link
 				color: #000
 				font-weight: 500
-				size: 1.6rem
-				@include media-breakpoint-up(md)
-					//color: $color-brand
+				font-size: 1.6rem
+				padding: 1rem 1.6rem
+				@include media-breakpoint-up(xl)
+					padding: 1rem 2.2rem
 				&:hover
 					color: $color-brand
 
@@ -90,12 +92,14 @@ header
 		a.btn
 			font-size: 1.6rem
 			font-weight: 700
-			padding: 0.8rem 2.4rem
+			padding: 0.8rem 1.4rem
 			border-radius: 1.2rem
+			@include media-breakpoint-up(xl)
+				padding: 0.8rem 2.4rem
 			i
 				margin-right: 0.5rem
 			&:first-of-type
-				display: none
+				//display: none
 				@include media-breakpoint-up(xxl)
 					display: inline-block
 
